2022-02-16  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, reverting r286874.
        https://bugs.webkit.org/show_bug.cgi?id=236734

        Broke Apple Music pages which use the resolution media query

        Reverted changeset:

        "Enable the 'resolution' media query by default"
        https://bugs.webkit.org/show_bug.cgi?id=78087
        https://commits.webkit.org/r286874

2022-02-16  Jer Noble  <jer.noble@apple.com>

        [Cocoa] Adopt -streamDataParser:didProvideContentKeySpecifier:forTrackID: delegate callback
        https://bugs.webkit.org/show_bug.cgi?id=236109

        Reviewed by Eric Carlson.

        * wtf/PlatformHave.h:

2022-02-16  Eliot Hsu  <eliot_hsu@apple.com>

        Move Safe Browsing knowledge into SafariSafeBrowsing framework
        https://bugs.webkit.org/show_bug.cgi?id=231692

        Reviewed by Alex Christensen.

        Following up on an old FIXME, move Safari Safe Browsing-specific
        knowledge out of WebKit and into the SafariSafeBrowsing framework.
        This includes things like the Learn More URL, the Report an Error URL,
        etc.

        * wtf/PlatformHave.h:

2022-02-16  Philippe Normand  <pnormand@igalia.com>

        Add a dedicated ENABLE flag for MediaRecorder
        https://bugs.webkit.org/show_bug.cgi?id=236652

        Reviewed by Eric Carlson.

        ENABLE(MEDIA_RECORDER) depends on ENABLE(MEDIA_STREAM) and is enabled only for COCOA
        platforms. Suggested by Eric Carlson.

        * wtf/PlatformEnable.h:
        * wtf/PlatformEnableCocoa.h:

2022-02-16  Kimmo Kinnunen  <kkinnunen@apple.com>

        RemoteVideoFrameProxy is missing reference field encode, decode
        https://bugs.webkit.org/show_bug.cgi?id=236690

        Reviewed by Antti Koivisto.

        Export the MediaTime TextStream operator<< as inline function
        for all compilation modes. It is useful also when NDEBUG is defined,
        and it is hard to ifdef at all the call sites.
