@@ -1,3 +1,14 @@
+2022-02-17  Antti Koivisto  <antti@apple.com>
+
+        [CSS Container Queries] Enable by default
+        https://bugs.webkit.org/show_bug.cgi?id=236776
+
+        Reviewed by Sam Weinig.
+
+        Flip the switch.
+
+        * Scripts/Preferences/WebPreferencesExperimental.yaml:
+
 2022-02-16  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, reverting r286874.
